--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-    "jupyter.kernels.filter": [
-        {
-            "path": "/usr/bin/python3",
-            "type": "pythonEnvironment"
-        }
+    "jupyter.kernels.excludePythonEnvironments": [
+        "/usr/bin/python3"
     ]
 }
